--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "helloswish/craft-securi-cache-clear",
     "description": "Purge Securi caches from Craft.",
     "type": "craft-plugin",
+    "version": "1.0.1",
     "license": "mit",
     "support": {
         "email": "support@swishdigital.co",
